--- a/index.html
+++ b/index.html
@@ -14,23 +14,20 @@
     <main class="container">
         <header>
             <div class="filters">
-                <div class="filter filters__crime">
-                </div>
+                <div class="filter filters__crime"></div>
+                <div class="filter filters__officer"></div>
                 <div class="filter filters__incarceration">
-                    <select class="selector">Incarceration start/end time...
-                        
-                    </select>
-                </div>
-                <div class="filter filters__officer">
-                    <select class="selector">Please select an officer...
+                    <select class="selector-filter">Incarceration start/end time...
                         
                     </select>
                 </div>
             </div>
         </header>
-        <button id="getOfficersBtn" disabled="true">Get Officers</button>
+        <!-- <button id="getOfficersBtn" disabled="true">Get Officers</button> -->
         <article class="officersContainer"></article>
+        <article id="noteFormContainer"></article>
         <article class="criminalsContainer"></article>
+        <!-- <aside class="noteListContainer"></aside> -->
         <footer>
             <div>
                 <p>This is the footer</p>
