Witnesses button works, but content doesn't show. Also changed notes to read a criminal id but display the criminal name separately.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
             </div>
         </header>
         <!-- <button id="getOfficersBtn" disabled="true">Get Officers</button> -->
+        <button id="getWitnessesBtn">Get Witnesses</button>
         <article class="officersContainer"></article>
-        <article id="noteFormContainer"></article>
-        <article class="criminalsContainer"></article>
-        <!-- <aside class="noteListContainer"></aside> -->
+        <div class="crims-and-notes">
+            <article class="criminalsContainer"></article>
+            <aside class="noteListContainer">
+                <h3 class="notesTitle">Criminal Notes</h3>
+                <article id="noteFormContainer"></article>
+                <div class="allNotesHere"></div>
+            </aside>
+        </div>
         <footer>
             <div>
                 <p>This is the footer</p>
